# ACCR-replace

./: DevNotes.md  README.md  benchmark.py  pyproject.toml  setup.py  setup_cython_simple.py
ACCR_Replace/: __init__.py  ac_automaton.pyx  buffer.pxd  buffer.pyx  matcher.pxd  matcher.py  matcher.pyx  regex_engine.pyx
examples/: basic_usage.py
fastmatcher/: __init__.py  ac_automaton.pxd  ac_automaton.pyx  matcher.pyx  regex_engine.pxd
tests/: test_matcher.py
