[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.21",
    "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "fastmatcher"
description = "High-performance text matching library with AC automaton, regex, and streaming support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ACCR-replace Team", email = "team@accreplace.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["text", "matching", "automaton", "regex", "streaming", "cython"]
requires-python = ">=3.8"
dependencies = [
    "Cython>=0.29.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
packages = ["fastmatcher"]

[tool.setuptools.package-dir]
fastmatcher = "fastmatcher"

[tool.setuptools_scm]
write_to = "fastmatcher/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
